--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -1,5 +1,6 @@
 .reservationListForm {
   width: 100%;
+  height: 40vh; /* 세로 크기를 지정하여 스크롤이 생길 수 있게 함 */
   padding: 45px 15px 15px 15px;
   margin: 20px auto;
   position: relative;
@@ -31,26 +32,51 @@
     background-color: #fff;
     box-sizing: border-box;
     margin-bottom: 10px;
+    overflow: auto; /* 스크롤 생성 */
+    height: calc(100% - 75px); /* 위의 제목 부분을 제외한 나머지 공간 */
   }
+
   .reservation {
     border-radius: 0 0 15px 15px;
   }
-
 }
 
 .reservationList {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   border-radius: 15px;
-  flex-wrap: wrap;
   margin: 0 7px 10px 7px;
+  overflow: auto;
 }
 
 .reservationItem {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  gap: 50px;
+  align-items: center;
   margin: 5px 0;
   padding: 10px;
   cursor: pointer;
+  border-radius: 10px;
+  border: 2px solid transparent;
+
+  &.RESERVED {
+    border-color: blue;
+  }
+
+  &.CANCELED {
+    border-color: red;
+  }
+
+  &.PICKEDUP {
+    border-color: green;
+  }
+
+  &.NOSHOW {
+    border-color: gray;
+  }
 
   &:hover {
     transform: translateY(-2px);
@@ -69,6 +95,8 @@
 
 .imgWrapper {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .imgBox {
@@ -80,13 +108,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-.imgBox img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.5s;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s;
+  }
 }
 
 .canceled {
@@ -105,20 +133,20 @@
 .reservationStatus {
   display: flex;
   justify-content: space-between;
-  width: 62%;
-  margin-left: 20px;
+  align-items: center;
+  width: 60%;
 }
 
 .reservationCancelBtn {
+  background: #EAEDE2;
   color: #090909;
-  padding: 0.5em 1.3em;
-  font-size: 14px;
+  padding: 0.3em 1em;
+  font-size: 16px;
   border-radius: 0.5em;
-  background: rgba(230, 234, 220, 0.84);
   cursor: pointer;
   border: 1px solid #e8e8e8;
   transition: all 0.3s;
-  box-shadow: 3px 3px 7px #c5c5c5, -3px -3px 7px #ffffff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 
   &:active {
     color: #666;
@@ -126,19 +154,9 @@
   }
 }
 
-.calendarButton {
-  background-color: rgba(234, 97, 42, 0.7);
-  color: #fff;
-  font-size: 20px;
-  margin-top: 20px;
-}
-
-.cancelRes {
-  background-color: rgba(55, 112, 49, 0.5);
-}
-
-.pickedUpBtn {
-  background-color: rgba(55, 112, 49, 0.5);
+.placeholder {
+  width: 100px; /* 예약 취소 버튼과 동일한 크기 */
+  height: 40px;
 }
 
 @keyframes spin {
