--- a/src/components/customer/mypage-edit/Edit.module.scss
+++ b/src/components/customer/mypage-edit/Edit.module.scss
@@ -156,3 +156,12 @@
   }
 }
 
+@media (max-width: 400px) {
+  .edit {
+    width: 100%;
+  }
+  .img-box {
+    width: 80px;
+    height: 80px;
+  }
+}
