--- a/src/components/customer/mypage-edit/SideBar.module.scss
+++ b/src/components/customer/mypage-edit/SideBar.module.scss
@@ -94,3 +94,17 @@ li {
   }
 }
 
+@media (max-width: 400px) {
+  .profile {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    left:-100%;
+    transition: .40s ease-in-out 0s;
+    overflow-y: auto;
+    &.on {
+      left: 0;
+    }
+  }
+}
