--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -34,6 +34,26 @@
     margin-bottom: 10px;
     overflow: auto;
     height: calc(100% - 75px);
+
+    /* 스크롤바 스타일 */
+    &::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #888;
+      border-radius: 10px;
+      border: 3px solid #f1f1f1;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
   }
 
   .reservation {
@@ -62,25 +82,29 @@
   border-radius: 10px;
   border: 2px solid transparent;
 
-  &.RESERVED {
-    border-color: blue;
-  }
-
-  &.CANCELED {
-    border-color: red;
-  }
-
-  &.PICKEDUP {
-    border-color: green;
-  }
-
-  &.NOSHOW {
-    border-color: gray;
-  }
-
   &:hover {
     transform: translateY(-2px);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  &.CANCELED {
+    border: solid 2px #E68a8c;
+    border-radius: 15px;
+  }
+
+  &.RESERVED {
+    border: solid 2px #89b449;
+    border-radius: 15px;
+  }
+
+  &.PICKEDUP {
+    border: solid 2px #407f3e;
+    border-radius: 15px;
+  }
+
+  &.NOSHOW {
+    border: solid 2px gray;
+    border-radius: 15px;
   }
 }
 
@@ -118,7 +142,6 @@
   }
 
   .canceled {
-
     color: red;
     position: absolute;
     right: 0px;
@@ -134,9 +157,10 @@
 
   .loading {
     color: blue;
+    animation: spin 3s linear infinite;
     position: absolute;
-    right: 0px;
-    bottom: 0px;
+    right: 0;
+    bottom: 0;
   }
 }
 
@@ -163,11 +187,6 @@
     box-shadow: inset 4px 4px 3px #c5c5c5, inset -4px -4px 3px #ffffff;
   }
 }
-
-//.placeholder {
-//  width: 100px; /* 예약 취소 버튼과 동일한 크기 */
-//  height: 40px;
-//}
 
 @keyframes spin {
   0% {
