--- a/src/components/StoreRegister/ProductRegisterForm.module.scss
+++ b/src/components/StoreRegister/ProductRegisterForm.module.scss
@@ -1,32 +1,35 @@
+$upload-w: 568px;
+$upload-h: 360px;
+$color-main: #43e97b;
+$color-light: #e3ffef;
+
 .image-upload {
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  //padding: 20px 0;
+  position: relative;
+  width: 80%;
+  height: $upload-h;
+  max-width: $upload-w;
+  margin: 0 auto 30px;
   padding: 10px;
   border: 1px solid var(--color-gray-300);
-  //border: 2px solid #43e97b;
   border-radius: 10px;
-  text-align: center;
-  color: #aaa;
-  font-size: 1.2em;
-  position: relative;
-  cursor: pointer;
-  margin: 0 0 30px;
   background: #f4f8f7;
+  color: #aaa;
+  text-align: center;
+  font-size: 1.2em;
+  cursor: pointer;
 
   input[type="file"] {
     display: none;
   }
   label {
     cursor: pointer;
-    //color: #43e97b;
     color: #bbb;
-    //height: 400px;
-    width: 650px;
-    height: 400px;
+    width: 80%;
+    height: $upload-h;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,28 +43,26 @@
 .image-preview {
   display: flex;
   flex-wrap: wrap;
-  //margin-top: 10px;
   width: 100%;
+  height: 250px;
   justify-content: center;
   background: var(--color-gray-300);
 
   img {
-    //max-width: 150px;
-    //max-height: 150px;
-    width: 656px;
-    height: 405px;
+    width: calc($upload-w - 4px);
+    height: calc($upload-h - 10px);
     object-fit: cover;
     object-position: center;
-    margin: 5px;
+    margin: 5px auto;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
   label {
-    position: absolute; /* 변경 */
-    top: 0; /* 추가 */
-    left: 0; /* 추가 */
-    width: 656px; /* 추가 */
-    height: 405px; /* 추가 */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: $upload-w;
+    height: $upload-h;
     opacity: 0;
     cursor: pointer;
     z-index: 1;
@@ -70,22 +71,18 @@
     //z-index: 1;
   }
 }
+
 .chips {
   display: flex;
   flex-direction: row;
-  //justify-content: space-between;
   align-content: center;
   width: 75%;
-  margin: 8px auto 30px;
-  //margin: 8px 0 30px;
-  //border: 1px solid red;
+  margin: 0 auto 10px;
   gap: 15px;
-
 
   label.chip{
     display: block;
     width: 100px;
-    //color: #ffffff;
     font-size: 1rem;
     color: var(--color-gray-400);
     font-weight: 400;
@@ -98,15 +95,16 @@
     &:hover {
       color: #ffffff;
       font-weight: 500;
-      border: 1px solid #43e97b;
-      background: #43e97b;
+      border: 1px solid $color-main;
+      background: $color-main;
     }
   }
+
   label.picked {
-    color: #43e97b;
+    color: $color-main;
     font-weight: 500;
-    border: 1px solid #43e97b;
-    background: #e3ffef;
+    border: 1px solid $color-main;
+    background: $color-light;
   }
 
   .radioInput {
@@ -116,6 +114,45 @@
     overflow: hidden;
     margin: 0;
     padding: 0;
+  }
+
+}
+
+
+@media (max-width: 390px) {
+
+  .image-upload {
+    width: 100%;
+    height: 250px;
+    padding: 10px;
+
+    .image-preview {
+      label{
+        width: 100%;
+        height: 100%;
+        font-size: 0.8rem;
+      }
+      img {
+        width: 100%;
+        height: 95%;
+        margin: auto auto;
+      }
+    }
+
+  }
+
+  .chips {
+    width: 100%;
+    margin: 0 5px 20px;
+    flex-direction: row;
+    gap: 20px;
+
+    label.chip {
+      height: 40px;
+      //margin: 0 auto;
+      //padding: 10px;
+      text-align: center;
+    }
   }
 
 }
