--- a/src/components/StoreRegister/StoreRegisterForm.module.scss
+++ b/src/components/StoreRegister/StoreRegisterForm.module.scss
@@ -1,21 +1,26 @@
  // 폰트: 프리텐다드
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 
+ $form-w: 750px;
+ $form-inner-w: 75%;
+ $color-main: #43e97b;
+ $font-pretendard: "Pretendard Variable", Pretendard, sans-serif;
+
 .registration {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 20px 50px;
-  position: relative;
-  color: #4b4a47;
-  //border: 1px solid lawngreen;
   width: 750px;
   margin: 0 auto;
-  text-align: left;
-  font-family: "Pretendard Variable", Pretendard, sans-serif ;
+  padding: 20px 50px;
+  border-radius: 10px;
+  //border: 1px solid lawngreen;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: relative;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  background-color: #fff;
+  color: #4b4a47;
+  text-align: left;
+  font-family: $font-pretendard ;
 
   h2 {
     font-weight: 700;
@@ -30,88 +35,71 @@
     text-align: center;
   }
   label {
+    width: $form-inner-w;
+    margin: 0 auto 5px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    //margin: 0 0 5px 5px;
     font-weight: 700;
-    width: 75%;
-    margin: 0 auto 5px;
 
     .error {
       color: #ff0000;
       font-size: 0.9rem;
-      //display: inline;
-      //padding: 0 0 0 30px;
     }
   }
   input, select {
     //border: 1px solid blueviolet;
-    width: 75%;
+    width: $form-inner-w;
     margin: 0 auto 30px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    //margin-bottom: 30px;
-    font-family: "Pretendard Variable", Pretendard, sans-serif;
+    font-family: $font-pretendard;
     font-size: 16px;
 
     &:focus {
-      border: 2px solid #2fd067;
+      border: 2px solid $color-main;
       box-shadow: 1px 3px 5px rgba(100, 100, 100, 0.1);
       outline: none;
     }
     & * {
-      font-family: "Pretendard Variable", Pretendard, sans-serif;
+      font-family: $font-pretendard;
       font-size: 16px;
     }
     &::placeholder {
-      font-family: "Pretendard Variable", Pretendard, sans-serif;
+      font-family: $font-pretendard;
       color: #ccc;
     }
 
   }
-  //select {
-  //  //width: 100%;
-  //  height: 35px;
-  //  margin-bottom: 40px;
-  //  border-radius: 5px;
-  //}
 
   .btn-approval {
-    //box-shadow:inset 0px 1px 0px 0px #a4e271;
-    //background: linear-gradient(45deg, #43e97b 0%, #38f9d7 100%);
-    background: #43e996;
-    border-radius:6px;
-    //border:1px solid mediumvioletred;
+    width: 200px;
     display:block;
-    cursor:pointer;
-    //color:#ffffff;
-    color:var(--color-gray-600);
-    font-family: "Pretendard Variable", Pretendard, sans-serif;
-    font-size: 1rem;
-    font-weight:bold;
-    padding:15px 35px;
-    text-decoration:none;
-    //text-shadow:0px 1px 0px #528009;
-    text-align: center;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    //margin-bottom: 60px;
     margin: 30px 0 50px;
-    //transition: 300ms;
-    width: 200px;
+    padding:15px 35px;
     border: 0;
-
+    border-radius:6px;
+    background: $color-main;
+    //color:#ffffff;
+    color:var(--color-gray-800);
+    font-family: $font-pretendard;
+    font-size: 1rem;
+    font-weight:bold;
+    text-decoration:none;
+    text-align: center;
+    cursor:pointer;
 
     &:hover, &:active {
-      background:linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
-      //border:1px solid #43e97b;
+      background:linear-gradient(to right, $color-main 0%, #38f9d7 100%);
     }
   }
   .disabled {
     background: var(--color-gray-300);
+    color: var(--color-gray-400);
 
     &:hover {
       background: var(--color-gray-300);
@@ -119,4 +107,42 @@
   }
 }
 
+ @media (max-width: 390px) {
+   .registration {
+     width: calc($form-w - 360px);
+     padding: 15px;
 
+     h2 {
+       font-size: 1.2rem;
+       margin-top: 10px
+     }
+
+     h3 {
+       font-size: 1rem;
+     }
+     label {
+       width: 100%;
+
+       .error {
+         font-size: 0.8rem
+       }
+     }
+     input, select {
+       width: 100%;
+       margin: 0 auto 30px;
+       padding: 8px;
+       font-size: 16px;
+     }
+
+     .btn-approval {
+       width: 90%;
+       height: 56px;
+       margin: 15px auto;
+       padding: 10px 20px;
+       font-size: 0.9rem;
+       left: 50%;
+       transform: translateX(-55%);
+     }
+   }
+
+ }
