--- a/src/components/mainPage/CategoryBtn.module.scss
+++ b/src/components/mainPage/CategoryBtn.module.scss
@@ -26,6 +26,12 @@
 .btnImg img {
   width: 80%;
   object-fit: cover;
+  transform-origin: top center;
+  transition: transform 0.3s ease;
+}
+.btnImg img:hover{
+  width: 85%;
+  transform: scale(1.1);
 }
 
 .btnText {
