--- a/src/components/store/mypage/Calendar.module.scss
+++ b/src/components/store/mypage/Calendar.module.scss
@@ -144,7 +144,7 @@
 @media (max-width: 400px) {
   .calendarContainer {
     width: 100%;
-    padding: 10px;
+    padding: 0;
   }
 
   .calendarMonth {
