--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -52,7 +52,7 @@
     top: 20px;
     left: 10px; 
     background-color: #7CAF74; 
-    padding: 5px 10px; 
+    padding: 5px 13px 5px 10px; 
     border-radius: 0 20px 20px 0;
     font-size: 12px; 
     color: #fff; 
