--- a/src/pages/product/ProductDetailModal.module.scss
+++ b/src/pages/product/ProductDetailModal.module.scss
@@ -14,13 +14,14 @@
       border-radius: 8px;
       //padding: 16px;
       margin: 8px 0px;
-      height: 10%;
       position: relative;
+      height: 144px;
 
       .storeImg {
         width: 100%;
-        height: 10%;
+        height: 100%;
         border-radius: 8px;
+        object-fit: contain; // 사진 깨지는데 어떻게 보일 지 정해야함
       }
 
       .fromWhere {
@@ -100,11 +101,22 @@
 
   .paymentBox {
 
+
     line-height: 3;
     border: 1px solid rgb(231, 231, 231);
     border-radius: 8px;
     padding: 16px;
     margin: 8px 0px;
+    height: fit-content;
+
+    div{
+      padding: 0 5px;
+      margin-bottom: 8px;
+    }
+
+    svg{
+      padding-right: 5px;
+    }
 
     .productAmtAdjustBtn {
       display: flex;
@@ -143,7 +155,7 @@
     .orderSum {
       display: flex;
       align-items: center;
-
+      justify-content: space-between;
     }
 
     .promoCode {
