--- a/src/pages/customer/CancelReservationDetailModal.module.scss
+++ b/src/pages/customer/CancelReservationDetailModal.module.scss
@@ -18,11 +18,10 @@
       justify-content: space-between;
       margin-bottom: 10px;
 
-      // 왜 오류 나는지 모르겠음
-      //.cancelFee{
-      //  font-weight: 700;
-      //  font-size: 20px;
-      //}
+      .cancelFee{
+        font-weight: 700;
+        font-size: 20px;
+      }
     }
 
     .feeRule {
