--- a/src/components/mainPage/CategoryBtn.module.scss
+++ b/src/components/mainPage/CategoryBtn.module.scss
@@ -1,42 +1,70 @@
-.nav{
+.nav {
   width: 80%;
-  // background-color: red;
   margin: 0 auto;
-}
-.food-nav{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  margin-bottom: 20px;
+
+  .food-nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+
+    .category-btn {
+      display: inline-block;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      text-align: center;
+      margin: 0 30px;
+
+      .btnImg {
+        width: 60px; 
+        height: 50px; 
+
+        img {
+          width: 80%;
+          object-fit: cover;
+          transform-origin: top center;
+          transition: transform 0.3s ease;
+
+          &:hover {
+            width: 85%;
+            transform: scale(1.1);
+          }
+        }
+      }
+
+      .btnText {
+        margin-top: 8px;
+        font-size: 16px;
+        font-weight: 600;
+        color: #0d0d0d;
+      }
+    }
+  }
 }
 
-.category-btn {
-  display: inline-block;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  text-align: center;
-}
 
-.btnImg {
-  width: 60px; 
-  height: 50px; 
-}
+@media (max-width: 390px) {
+  .nav {
+    width: 100%;
 
-.btnImg img {
-  width: 80%;
-  object-fit: cover;
-  transform-origin: top center;
-  transition: transform 0.3s ease;
-}
-.btnImg img:hover{
-  width: 85%;
-  transform: scale(1.1);
-}
+    .food-nav {
+      flex-direction: row;
+      justify-content: space-evenly; 
 
-.btnText {
-  margin-top: 8px;
-  font-size: 16px;
-  font-weight: 600;
-  color: #0d0d0d;
+      .category-btn {
+        margin: 5px; 
+
+        .btnImg {
+          width: 50px;
+          height: 40px;
+        }
+
+        .btnText {
+          font-size: 14px;
+        }
+      }
+    }
+  }
 }
