--- a/src/components/mainPage/CategoryBtn.module.scss
+++ b/src/components/mainPage/CategoryBtn.module.scss
@@ -1,70 +1,74 @@
+// 기본 박스 모델 설정
+* {
+  box-sizing: border-box;
+}
+
 .nav {
   width: 80%;
   margin: 0 auto;
+  // background-color: red; 
+}
 
-  .food-nav {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-    flex-wrap: wrap;
+.food-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
 
-    .category-btn {
-      display: inline-block;
-      cursor: pointer;
-      transition: background-color 0.3s;
-      text-align: center;
-      margin: 0 30px;
+.category-btn {
+  display: inline-block;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  text-align: center;
+  margin: 5px;
+}
 
-      .btnImg {
-        width: 60px; 
-        height: 50px; 
+.btnImg {
+  width: 60px; 
+  height: 50px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-        img {
-          width: 80%;
-          object-fit: cover;
-          transform-origin: top center;
-          transition: transform 0.3s ease;
+.btnImg img {
+  width: 80%; // 부모 요소의 너비에 맞추기
+  height: auto; // 비율 유지
+  object-fit: cover;
+  transform-origin: top center;
+  transition: transform 0.3s ease;
+}
 
-          &:hover {
-            width: 85%;
-            transform: scale(1.1);
-          }
-        }
-      }
+.btnImg img:hover {
+  transform: scale(1.1);
+}
 
-      .btnText {
-        margin-top: 8px;
-        font-size: 16px;
-        font-weight: 600;
-        color: #0d0d0d;
-      }
-    }
-  }
+.btnText {
+  margin-top: 8px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #0d0d0d;
 }
 
 
 @media (max-width: 390px) {
-  .nav {
-    width: 100%;
-
-    .food-nav {
-      flex-direction: row;
-      justify-content: space-evenly; 
-
-      .category-btn {
-        margin: 5px; 
-
-        .btnImg {
-          width: 50px;
-          height: 40px;
-        }
-
-        .btnText {
-          font-size: 14px;
-        }
-      }
-    }
+  .nav{
+    width:100%;
   }
+  .food-nav{
+    margin: 10px 10px 0 10px;
+  }
+  .btnImg{
+    width:  40px;
+    height: auto;
+    margin-bottom: 15px;
+  }
+  .btnText {
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+
 }
