--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -48,7 +48,7 @@
     font-size: 12px; 
     color: #fff; 
     font-weight: bold;
-    z-index: 10; 
+    z-index: 5; 
   }
 }
 
@@ -89,10 +89,20 @@
   right: 20px;
 }
 
+.slick-list {
+  padding: 0 !important;
+}
 
 @media (max-width: 400px) {
   .list .title{
     padding: 20px 20px 5px 0;
   }
 
+  .storeItem{
+    padding-right: 0px;
+  }
+  .storeItem img {
+    width: 100%;
+    height: 100px;
+  }
 }
