--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -90,7 +90,7 @@
 }
 
 .slick-list {
-  padding: 0 !important;
+  margin: 0 -100px !important;
 }
 
 @media (max-width: 400px) {
@@ -100,6 +100,7 @@
 
   .storeItem{
     padding-right: 0px;
+    height: 160px;
   }
   .storeItem img {
     width: 100%;
