--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -107,3 +107,47 @@
     height: 100px;
   }
 }
+
+
+// 수량 0일 때 회색처리
+
+.storeItem {
+  position: relative;  
+  overflow: hidden;  
+}
+
+.storeItem img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  display: block;
+  border-radius: 10px;
+  border: 1px solid #cecece;
+  transition: opacity 0.3s ease; 
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  opacity: 0; 
+  transition: opacity 0.3s ease;  
+}
+
+.storeItem.low-stock .overlay {
+  opacity: 1;  
+}
+
+.storeItem.low-stock img {
+  opacity: 0.5; 
+}
