--- a/src/components/mainPage/CategoryList.module.scss
+++ b/src/components/mainPage/CategoryList.module.scss
@@ -83,3 +83,47 @@
     flex: 1 1 100%;
   }
 }
+
+
+// 수량 0일 때 회색처리
+
+.categoryItem {
+  position: relative;
+  overflow: hidden;  
+}
+
+.categoryImage {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  display: block;
+  border-radius: 10px;
+  border: 1px solid #cecece;
+  transition: opacity 0.3s ease; 
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  opacity: 0; 
+  transition: opacity 0.3s ease;  
+}
+
+.categoryItem.low-stock .overlay {
+  opacity: 1;
+}
+
+.categoryItem.low-stock .categoryImage {
+  opacity: 0.5; 
+}
