--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -209,6 +209,7 @@
 @media (max-width: 400px) {
   .reservationListForm {
     padding: 0;
+    height: auto;
     .title {
       height: 50px;
       font-size: 16px;
@@ -221,7 +222,7 @@
 
     .infoWrapper {
       padding: 5px;
-      height: calc(100% - 60px);
+      height: auto;
       &::-webkit-scrollbar {
         display: none;
       }
