--- a/src/components/customer/mypage/Profile.module.scss
+++ b/src/components/customer/mypage/Profile.module.scss
@@ -109,7 +109,7 @@
     height: 100%;
     position: absolute;
     z-index: 10;
-    left:-100%;
+    left: -100%;
     transition: .40s ease-in-out 0s;
     overflow-y: auto;
     &.on {
@@ -130,6 +130,15 @@
           margin: 0;
           padding: 10px;
         }
+      }
+
+      .mobileContent {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+        height: auto;
+        overflow-y: auto;
       }
     }
   }
