--- a/src/components/mainPage/CategoryList.module.scss
+++ b/src/components/mainPage/CategoryList.module.scss
@@ -45,11 +45,12 @@
   height: 15%;
   display: flex;
   align-items: center;
-  padding: 10px 0 10px 10px;
+  padding: 20px 0 10px 10px;
   position: absolute;
   bottom: 40px;
   left: 0;
   right: 0;
+  font-size: 20px;
 }
 
 .storePrice { 
