--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -41,7 +41,6 @@
     justify-content: center;
     height: 25px;
     top: 20px;
-    left: 10px; 
     background-color: #7CAF74; 
     padding: 5px 13px 5px 10px; 
     border-radius: 0 20px 20px 0;
@@ -64,14 +63,14 @@
 .storeItem p {
   height: 15%;
   display: flex;
-  align-items: center;
+  // align-items: center;
   padding: 10px 0 10px 10px;
   position: absolute;
 }
 
 .storeItem span {
   position: absolute;
-  bottom: 10px;
+  bottom: 4px;
 }
 
 .storeItem .categoryName {
@@ -96,7 +95,6 @@
 
 
 // 수량 0일 때 회색처리
-
 .storeItem {
   position: relative;  
   overflow: hidden;  
@@ -151,7 +149,7 @@
   }
 
   .storeItem{
-    padding-right: 0px;
+    padding-left: 0px;
     width:150px;
     height: 160px;
   }
@@ -161,9 +159,20 @@
     height: 100px;
   }
 
+  .storeItem .storePrice {
+    font-size: 15px;
+    left:12px;
+  }
+  
+  .storeItem .productCnt{
+    font-size: 15px;
+    right: 20px;
+  }
+
+
   .overlay{
     top: 10px;
-    left: 10px;
+    left: 0px;
     width: 92%;
     height: 62%;
     font-size: 15px;
