--- a/src/components/mainPage/slick-theme.css
+++ b/src/components/mainPage/slick-theme.css
@@ -4,6 +4,7 @@
   font-size: 25px;
   position: relative;
   top: -20px;
+  left: -5px;
 }
 
 @media (max-width: 400px) {
@@ -19,4 +20,9 @@
         top:2px;
         right: 0px;
     }
+}
+
+
+.slick-list{
+    padding: 0 0 !important;
 }
