--- a/src/components/admin/approval/ApprovalTables.module.scss
+++ b/src/components/admin/approval/ApprovalTables.module.scss
@@ -1,26 +1,31 @@
 $font-pretendard: "Pretendard Variable", Pretendard, sans-serif;
 
-.tbl-line {
-  font-family: $font-pretendard ;
-  font-size: 16px;
-  display: table;
-  border-collapse: collapse;
+.table-section {
   margin: 20px auto 50px;
+  width: 1600px;
+  //border: 1px solid yellowgreen;
 
-  tr {
-    border-bottom: 1px solid var(--color-gray-200);
-    height: 40px;
-    line-height: 40px;
-    display: flex;
-    align-items: center;
+  .tbl-line {
+    font-family: $font-pretendard ;
+    font-size: 16px;
+    display: table;
+    border-collapse: collapse;
 
-    &:nth-child(even) {
-      background: #f2f4f4;
-    }
+    tr {
+      border-bottom: 1px solid var(--color-gray-200);
+      height: 40px;
+      line-height: 40px;
+      display: flex;
+      align-items: center;
 
-    td {
-      //border: 1px solid blue;
-      display: table-cell;
+      &:nth-child(even) {
+        background: #f2f4f4;
+      }
+
+      td {
+        //border: 1px solid blue;
+        display: table-cell;
+      }
     }
   }
 }
