--- a/src/pages/product/ProductDetailModal.module.scss
+++ b/src/pages/product/ProductDetailModal.module.scss
@@ -17,8 +17,17 @@
       position: relative;
       height: 144px;
 
+      .productImg {
+        outline: 2px solid red;
+        width: 70%;
+        height: 100%;
+        border-radius: 8px;
+        object-fit: contain; // 사진 깨지는데 어떻게 보일 지 정해야함
+      }
+
       .storeImg {
-        width: 100%;
+        outline: 2px solid blue;
+        width: 30%;
         height: 100%;
         border-radius: 8px;
         object-fit: contain; // 사진 깨지는데 어떻게 보일 지 정해야함
