--- a/src/components/admin/approval/ApprovalTables.module.scss
+++ b/src/components/admin/approval/ApprovalTables.module.scss
@@ -3,6 +3,7 @@ $font-pretendard: "Pretendard Variable", Pretendard, sans-serif;
 .table-section {
   margin: 20px auto 50px;
   width: 1580px;
+  //width: 83%;
   box-shadow: 2px 5px 8px 3px rgba(100,100,100,0.1);
   padding: 20px 10px;
   border-radius: 20px;
@@ -46,6 +47,7 @@ $font-pretendard: "Pretendard Variable", Pretendard, sans-serif;
         //box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1);
         border-radius: 5px;
         margin: 0 5px;
+
         &:last-child {
           background: #ff8487;
         }
@@ -58,6 +60,7 @@ $font-pretendard: "Pretendard Variable", Pretendard, sans-serif;
     font-size: 16px;
     display: table;
     border-collapse: collapse;
+    margin: 30px 0;
 
     tr {
       border-bottom: 1px solid rgba(0,0,0,0.1);
