--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -1,23 +1,21 @@
 
+.logoutButton, .loginButton {
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  position: absolute;
+  right: 30px;
+}
+
+/* 각각의 버튼에 대한 스타일을 따로 적용하려면 아래와 같이 개별적으로 지정 */
 .logoutButton {
-  // 로그아웃 버튼 스타일
-  background-color: #610e0e; // 버튼 배경색
-  color: #fff; // 텍스트 색상
-  border: none; // 기본 테두리 제거
-  padding: 10px 20px; // 패딩 추가
-  border-radius: 5px; // 모서리 둥글게
-  cursor: pointer; // 포인터 커서
-  font-size: 16px; // 폰트 크기
+  background-color: #610e0e;
 }
 
 .loginButton {
-  // 로그아웃 버튼 스타일
-  background-color: rgba(36, 39, 98, 0.5); // 버튼 배경색
-  color: #fff; // 텍스트 색상
-  border: none; // 기본 테두리 제거
-  padding: 10px 20px; // 패딩 추가
-  border-radius: 5px; // 모서리 둥글게
-  cursor: pointer; // 포인터 커서
-  font-size: 16px; // 폰트 크기
+  background-color: rgb(71, 122, 188);
 }
 
