--- a/src/components/search/SearchList.module.scss
+++ b/src/components/search/SearchList.module.scss
@@ -2,13 +2,13 @@
   margin: 0 auto;
   position: relative;
   inline-size: 70%;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
   border-top: solid 1px #e7e7e7;
 }
 
 .storeList {
+  display: block;
   padding: 20px 20px 0 20px;
+  height: 42px;
   font-size: 22px;
   font-weight: 600;
   text-align: left;
@@ -18,7 +18,7 @@
 }
 
 .categoryContainer {
-  margin: 30px auto;
+  margin: 30px auto 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -28,7 +28,7 @@
 }
 
 .categoryItem {
-  flex-basis: calc(25% - 20px);
+  flex-basis: calc(20% - 20px);
   box-sizing: border-box;
   margin-bottom: 20px;
   text-align: center;
